// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidationSummary /> should be visible when an error occurs 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="validation-summary alert alert-danger fade"
      role="alert"
    >
      <div
        class="validation-summary"
        id="validation-summary"
      >
        <h4
          class="alert-heading"
        >
          Errors
        </h4>
        <ul>
          <li>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-exclamation-circle fa-w-16 mr-2"
              data-icon="exclamation-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                fill="currentColor"
              />
            </svg>
            <a
              href="#mock"
            >
              mock: 
              <span>
                This field is mandatory.
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="field-group is-invalid"
    >
      <label
        class="text-right"
        for="mock"
      >
        mock
        <span
          class="field-required"
        >
           *
        </span>
      </label>
      <div
        class="input-container"
      >
        <input
          id="mock"
          name="mock"
          type="text"
          value=""
        />
        <span>
          This field is mandatory.
        </span>
      </div>
    </div>
    <button
      disabled=""
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`<ValidationSummary /> should render without crashing 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="field-group"
    >
      <label
        class="text-right"
        for="mock"
      >
        mock
      </label>
      <div
        class="input-container"
      >
        <input
          id="mock"
          name="mock"
          type="text"
          value=""
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;
